--- a/quickstart/src/template/app.component.html
+++ b/quickstart/src/template/app.component.html
@@ -13,16 +13,16 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="#">Home</a>
+                    <a routerLink="/" routerLinkActive="active">Home</a>
                 </li>
                 <li>
-                    <a href="#about">About</a>
+                    <a routerLink="/about-us" routerLinkActive="active">About</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a routerLink="/contact-us" routerLinkActive="active">Contact</a>
                 </li>
                 <li>
-                    <a href="#news">News</a>
+                    <a routerLink="/" routerLinkActive="active">News</a>
                 </li>
             </ul>
         </div>
@@ -31,6 +31,7 @@
     <!-- /.container -->
 </nav>
 <!-- /.navbar -->
+<router-outlet></router-outlet>
 
 <div class="container" style="margin-top:60px;">
 
