--- a/quickstart/src/template/app.component.html
+++ b/quickstart/src/template/app.component.html
@@ -12,17 +12,17 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active">
-                    <a routerLink="/" routerLinkActive="active">Home</a>
+                <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                    <a routerLink="/">Home</a>
                 </li>
-                <li>
-                    <a routerLink="/about-us" routerLinkActive="active">About</a>
+                <li routerLinkActive="active">
+                    <a routerLink="/about-us">About</a>
                 </li>
-                <li>
-                    <a routerLink="/contact-us" routerLinkActive="active">Contact</a>
+                <li routerLinkActive="active">
+                    <a routerLink="/contact-us">Contact</a>
                 </li>
-                <li>
-                    <a routerLink="/" routerLinkActive="active">News</a>
+                <li routerLinkActive="active">
+                    <a routerLink="/news">News</a>
                 </li>
             </ul>
         </div>
@@ -32,7 +32,6 @@
 </nav>
 <!-- /.navbar -->
 
-
 <div class="container" style="margin-top:60px;">
 
     <div class="row row-offcanvas row-offcanvas-right">
@@ -41,73 +40,8 @@
             <p class="pull-right visible-xs">
                 <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
             </p>
-            <div class="jumbotron">
-                <h1>Hello, world!</h1>
-                <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range
-                    viewport sizes to see it in action.</p>
-            </div>
-            <div class="row">
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                        euismod. Donec sed odio dui. </p>
-                    <p>
-                        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                    </p>
-                </div>
-                <!--/.col-xs-6.col-lg-4-->
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                        euismod. Donec sed odio dui. </p>
-                    <p>
-                        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                    </p>
-                </div>
-                <!--/.col-xs-6.col-lg-4-->
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                        euismod. Donec sed odio dui. </p>
-                    <p>
-                        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                    </p>
-                </div>
-                <!--/.col-xs-6.col-lg-4-->
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                        euismod. Donec sed odio dui. </p>
-                    <p>
-                        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                    </p>
-                </div>
-                <!--/.col-xs-6.col-lg-4-->
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                        euismod. Donec sed odio dui. </p>
-                    <p>
-                        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                    </p>
-                </div>
-                <!--/.col-xs-6.col-lg-4-->
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                        euismod. Donec sed odio dui. </p>
-                    <p>
-                        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-                    </p>
-                </div>
-                <!--/.col-xs-6.col-lg-4-->
-            </div>
+            <router-outlet></router-outlet>
+
             <!--/row-->
         </div>
         <!--/.col-xs-12.col-sm-9-->
@@ -137,5 +71,6 @@
     </footer>
 
 </div>
+
+
 <!--/.container-->
-<router-outlet></router-outlet>
